# proliant-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_SIGNING.md  LICENSE  README.md  install.ps1  install.sh  mkdocs.yml  notes-agents.md  notes.md  pcli.spec  proliant.spec  pyproject.toml  requirements-docs.txt  sample-inventory.ini
.github/: copilot-instructions.md  release.yml
.github/workflows/: build-exe.yml  docs.yml
.obsidian/: appearance.json  workspace.json
.obsidian/snippets/: wide-page.css
docs/: _config.yml  additional-setup.md  com.md  demo.tape  ilo.md  index.md  installation.md  oneview.md
docs/assets/: demo.tape
docs/assets/css/: style.scss
docs/overrides/: main.html
docs/stylesheets/: extra.css
installer/: proliant-cli.iss
scripts/: render_demo_gif.py  render_help_svg.py
src/pcli/: __init__.py  cli.py
src/pcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pcli/com/: __init__.py  auth.py  cli.py  client.py  describe.py  devices.py  firmware.py  inventory.py  login.py  printers.py  reports.py  workspaces.py
src/pcli/common/: __init__.py  completers.py  display.py  http.py  runner.py  targets.py
src/pcli/config/: cli.py
src/pcli/ilo/: __init__.py  __main__.py  bios.py  boot.py  cli.py  client.py  sdr.py  (+8 more)
src/proliant/: __init__.py  cli.py
tests/: conftest.py  smoke.sh  test_completion.py  test_password_mask.py  test_sentry.py  test_update.py  test_version.py  test_windows_setup.py
tests/com/: conftest.py  test_auth.py  test_cli_workspace_devices.py  test_describe_server_profile.py  test_devices.py  test_friendly_errors.py  test_json_output.py  test_login_friendly_errors.py  test_login_okta_password_fallback.py  test_login_workspaces.py  test_printers.py  test_regions.py  test_servers.py  test_whoami.py  test_workspaces_fetch.py
tests/common/: test_argparse_utils.py  test_completers.py  test_display.py  test_http.py  test_runner.py  test_targets.py
tests/ilo/: test_boot.py  test_cli.py  test_client.py  test_config.py  test_firmware.py  test_inventory_network.py  test_inventory_summary.py  test_json_output.py  test_power.py  test_printers.py  test_sdr.py
tests/oneview/: test_activity.py  test_appliance_info.py  test_appliance_update.py  test_appliances_cli.py  test_client.py  test_config.py  test_efuse.py  test_enclosures.py  test_firmware.py  test_hardware_types.py  test_interconnects_describe.py  test_interconnects_mac.py  test_json_output.py  test_load_client.py  test_network_internal_vlans.py  test_power.py  test_profile_reapply.py  test_profiles.py  test_profiles_reapply_cli.py  test_profiles_update.py  test_server_detail.py  test_servers.py  test_ssp_update.py  test_topology.py  test_update_enclosure_concurrency.py  test_update_enclosure_scope.py  test_update_enclosure_wizard.py  test_upgrade.py
tests/qs/: test_json_output.py
tests/setting/: test_telemetry.py
tests/setup/: test_wizard.py
tools/: Test-WinExe.ps1
(+79 files in other folders)
