[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcli"
version = "0.2.11"
description = "HPE ProLiant unified CLI — iLO Redfish and Compute Ops Management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "hjma29"}
]
keywords = ["hpe", "proliant", "ilo", "redfish", "compute-ops-management", "greenlake"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
# Core deps shared by all subcommands
dependencies = [
    "rich>=13.0",
    "argcomplete>=3.0",
]

[project.optional-dependencies]
ilo = [
    "httpx[http2]>=0.27",
]
com = [
    "httpx[http2]>=0.27",
    "pyyaml>=6.0",
]
qs = [
    "beautifulsoup4>=4.12",
    "markitdown>=0.1",
]
all = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "markitdown>=0.1",
]
dev = [
    "httpx[http2]>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
pcli = "pcli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/pcli"]
